[gd_scene load_steps=16 format=3 uid="uid://cfkm7ursdmmmo"]

[ext_resource type="Script" path="res://scripts/jogador.gd" id="1_bpph1"]
[ext_resource type="Texture2D" uid="uid://c353aqf60hl45" path="res://assets/Rocky Roads/Enemies/chicken.png" id="2_lx5e8"]
[ext_resource type="AudioStream" uid="uid://d2elpyybvlgv5" path="res://assets/sounds/458641__matrixxx__retro-jump-02.wav" id="3_yvswa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ve6yo"]
size = Vector2(15, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7ulb"]
atlas = ExtResource("2_lx5e8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rb8m"]
atlas = ExtResource("2_lx5e8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwpff"]
atlas = ExtResource("2_lx5e8")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdmco"]
atlas = ExtResource("2_lx5e8")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygspq"]
atlas = ExtResource("2_lx5e8")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7bdq"]
atlas = ExtResource("2_lx5e8")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7252"]
atlas = ExtResource("2_lx5e8")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7jlj"]
atlas = ExtResource("2_lx5e8")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckkgf"]
atlas = ExtResource("2_lx5e8")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ma433"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7ulb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rb8m")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwpff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdmco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygspq")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7bdq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7252")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7jlj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckkgf")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5qr50"]
size = Vector2(26, 11)

[node name="jogador" type="CharacterBody2D"]
collision_mask = 22
script = ExtResource("1_bpph1")

[node name="colisor-jogador" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.5, -8)
shape = SubResource("RectangleShape2D_ve6yo")

[node name="animacao" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
rotation = 3.14159
scale = Vector2(1, -1)
sprite_frames = SubResource("SpriteFrames_ma433")
animation = &"jump"
autoplay = "idle"
frame_progress = 0.903409

[node name="animator" type="AnimationPlayer" parent="."]

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(-1, -7.5)
shape = SubResource("RectangleShape2D_5qr50")
debug_color = Color(0.921569, 0, 0.686275, 0.419608)

[node name="remote" type="RemoteTransform2D" parent="."]

[node name="ray_right" type="RayCast2D" parent="."]
position = Vector2(8, -6)
target_position = Vector2(4, 0)
collision_mask = 4

[node name="ray_left" type="RayCast2D" parent="."]
position = Vector2(-10, -6)
target_position = Vector2(-4, 0)
collision_mask = 4

[node name="jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_yvswa")
volume_db = -15.0
pitch_scale = 0.76

[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
